2010-11-04  Erik Arvidsson  <arv@chromium.org>

Reviewed by Tony Chang.

        Computed style is not correct for negative values in the presence of zooming
        https://bugs.webkit.org/show_bug.cgi?id=48855

        Updated the test to include some negative values. I also added tests for zoom less than one which in turn
        forced me to increase the values because we lose a lot of precision when zooming out.

        * fast/css/getComputedStyle/computed-style-with-zoom-expected.txt: Updated the expectations
        * fast/css/getComputedStyle/script-tests/computed-style-with-zoom.js: Updated tests.
2010-11-04  Erik Arvidsson  <arv@chromium.org>

        Reviewed by Tony Chang.

        Computed style is not correct for negative values in the presence of zooming
        https://bugs.webkit.org/show_bug.cgi?id=48855

        * rendering/style/RenderStyle.h:
        (WebCore::adjustForAbsoluteZoom): When the value is less than zero we need to decrement instead of increment.

Canonical link: https://commits.webkit.org/61805@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71316 268f45cc-cd09-0410-ab3c-d52691b4dbfc